# MinGW-Win32API

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: resource.h
res/: Resource.rc
src/: main.cpp
